set (libname "adafruitms1438")
set (libdescription "upm module for the Adafruit Motor Shield 1438")
set (module_src ${libname}.cxx)
set (module_h ${libname}.h)
set (reqlibname "upm-pca9685")
include_directories("../pca9685")
upm_module_init()
add_dependencies(${libname} pca9685)
target_link_libraries(${libname} pca9685)
