set (libname "e50hx")
set (libdescription "upm module for the Veris E50HX (E50H2/E50H5)Energy Meters")
set (module_src ${libname}.cxx)
set (module_hpp ${libname}.hpp)

pkg_check_modules(BACNET libbacnet)
if (BACNET_FOUND)
  # upm-libbacnetmstp will bring in libbacnet, I hope
  set (reqlibname "upm-bacnetmstp")
  include_directories(${BACNET_INCLUDE_DIRS})
  include_directories("../bacnetmstp")
  upm_module_init()
  target_link_libraries(${libname} bacnetmstp)
  if (BUILDSWIG)
    if (BUILDSWIGNODE)
      set_target_properties(${SWIG_MODULE_jsupm_${libname}_REAL_NAME} PROPERTIES SKIP_BUILD_RPATH TRUE)
      swig_link_libraries (jsupm_${libname} bacnetmstp)
    endif()
    if (BUILDSWIGPYTHON)
      set_target_properties(${SWIG_MODULE_pyupm_${libname}_REAL_NAME} PROPERTIES SKIP_BUILD_RPATH TRUE)
      swig_link_libraries (pyupm_${libname} bacnetmstp)
    endif()
    if (BUILDSWIGJAVA)
      set_target_properties(${SWIG_MODULE_javaupm_${libname}_REAL_NAME} PROPERTIES SKIP_BUILD_RPATH TRUE)
      swig_link_libraries (javaupm_${libname} bacnetmstp)
    endif()
  endif()
endif ()
