set (libname "hwxpxx")
set (libdescription "upm module for the Veris HWXPXX (HWXPHTX)")
set (module_src ${libname}.cxx)
set (module_h ${libname}.h)

pkg_search_module(MODBUS libmodbus)
if (MODBUS_FOUND)
  set (reqlibname "libmodbus")
  include_directories(${MODBUS_INCLUDE_DIRS})
  upm_module_init()
  add_dependencies(${libname} ${MODBUS_LIBRARIES})
  target_link_libraries(${libname} ${MODBUS_LIBRARIES})
  if (BUILDSWIG)
    if (BUILDSWIGNODE)
      swig_link_libraries (jsupm_${libname} ${MODBUS_LIBRARIES} ${MRAA_LIBRARIES} ${NODE_LIBRARIES})
    endif()
    if (BUILDSWIGPYTHON)
      swig_link_libraries (pyupm_${libname} ${MODBUS_LIBRARIES} ${PYTHON_LIBRARIES} ${MRAA_LIBRARIES})
    endif()
  endif()
endif ()
