set (libname "hwxpxx")
set (libdescription "upm module for the Veris HWXPXX (HWXPHTX)")
set (module_src ${libname}.cxx)
set (module_hpp ${libname}.hpp)

pkg_check_modules(MODBUS libmodbus)
if (MODBUS_FOUND)
  set (reqlibname "libmodbus")
  include_directories(${MODBUS_INCLUDE_DIRS})
  upm_module_init()
  target_link_libraries(${libname} ${MODBUS_LIBRARIES})
  if (BUILDSWIG)
    if (BUILDSWIGNODE)
      swig_link_libraries (jsupm_${libname} ${MODBUS_LIBRARIES})
    endif()
    if (BUILDSWIGPYTHON)
      swig_link_libraries (pyupm_${libname} ${MODBUS_LIBRARIES})
    endif()
  endif()
endif ()
