set (libname "ozw")
set (libdescription "upm module for the OpenZWave library interface")
set (module_src ${libname}.cxx zwNode.cxx)
set (module_hpp ${libname}.hpp)

pkg_check_modules(OPENZWAVE libopenzwave)
if (OPENZWAVE_FOUND)
  set (reqlibname "libopenzwave")
  include_directories(${OPENZWAVE_INCLUDE_DIRS})
  upm_module_init()
  target_link_libraries(${libname} ${OPENZWAVE_LIBRARIES})
  if (BUILDSWIG)
    if (BUILDSWIGNODE)
      swig_link_libraries (jsupm_${libname} ${OPENZWAVE_LIBRARIES})
    endif()
    if (BUILDSWIGPYTHON)
      swig_link_libraries (pyupm_${libname} ${OPENZWAVE_LIBRARIES})
    endif()
  endif()
endif ()
